--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <br>
 <div class="projects">
   <div class="project">
-    <a href="Photo/index.html">
+    <a href="Photo/indexp.html">
       <h2>Photo Album</h2>
       <p>Description of Project 1</p>
     </a>
